# sentinel1-radar-case-study

./: .gitignore  AOI_Rubicon_sent1.geojson  README.md  pyproject.toml
outputs/: preprocessed_slc.dim  preprocessed_slc.tif  preprocessed_slc_EPSG:3857.tif
outputs/preprocessed_slc.data/: Sigma0_VH.hdr  Sigma0_VH.img  Sigma0_VV.hdr  Sigma0_VV.img
src/radar_cs/: main.py  utils.py
