[tool.poetry]
name = "radar-cs"
version = "0.1.0"
description = "package to process a slc image from Sentinel 1"
authors = ["matjayet"]
packages = [{include = "radar_cs", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.5"
matplotlib = "^3.10.1"
gdal = "3.8.4"
opencv-python = "^4.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
